--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/</item>
         <item>@font/aguafina_script</item>
         <item>@font/aldrich</item>
         <item>@font/alike</item>
         <item>@font/almendra</item>
+        <item>@font/arima_madurai_thin</item>
+        <item>@font/berkshire_swash</item>
     </array>
 </resources>
